{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 23,
  "lineage": "23d18237-deb1-c527-2c17-350b754865a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051a31ab2f4d498f5",
            "arn": "arn:aws:ec2:ap-south-1:531752696321:instance/i-01ad60308952c11b1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ad60308952c11b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02dc0358a69299d08"
              }
            ],
            "primary_network_interface_id": "eni-02dc0358a69299d08",
            "private_dns": "ip-10-0-0-221.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.221",
            "public_ip": "13.204.254.220",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f8471ca39064f4a2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05af23bba92da534a",
            "tags": {
              "Name": "my-server-0"
            },
            "tags_all": {
              "Name": "my-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d02fa74db6a1046"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "i-01ad60308952c11b1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051a31ab2f4d498f5",
            "arn": "arn:aws:ec2:ap-south-1:531752696321:instance/i-0c099176beac3df4b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c099176beac3df4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fee7ef5feef8bb91"
              }
            ],
            "primary_network_interface_id": "eni-0fee7ef5feef8bb91",
            "private_dns": "ip-10-1-1-241.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.241",
            "public_ip": "15.206.75.224",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de0d48325665d494",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd53ea2247e02656",
            "tags": {
              "Name": "my-server-1"
            },
            "tags_all": {
              "Name": "my-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019a022b3bd04002e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "i-0c099176beac3df4b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-051a31ab2f4d498f5",
            "arn": "arn:aws:ec2:ap-south-1:531752696321:instance/i-071565c8ab6dcb801",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071565c8ab6dcb801",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06fbccbf689154eff"
              }
            ],
            "primary_network_interface_id": "eni-06fbccbf689154eff",
            "private_dns": "ip-10-2-2-154.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.154",
            "public_ip": "13.235.76.209",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014d2256d32d632cc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07eafe2887a54c046",
            "tags": {
              "Name": "my-server-2"
            },
            "tags_all": {
              "Name": "my-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022ffd5a57fa374df"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "i-071565c8ab6dcb801",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:internet-gateway/igw-0aee4f2c4fa02492d",
            "id": "igw-0aee4f2c4fa02492d",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-gateway-0"
            },
            "tags_all": {
              "Name": "my-gateway-0"
            },
            "vpc_id": "vpc-09eead16e0278293e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:internet-gateway/igw-0e625285e58fc4f63",
            "id": "igw-0e625285e58fc4f63",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-gateway-1"
            },
            "tags_all": {
              "Name": "my-gateway-1"
            },
            "vpc_id": "vpc-03de0f03034988602"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:internet-gateway/igw-00edd499e6f1229ff",
            "id": "igw-00edd499e6f1229ff",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-gateway-2"
            },
            "tags_all": {
              "Name": "my-gateway-2"
            },
            "vpc_id": "vpc-0b45bb296f4da6d73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:route-table/rtb-07fc9a0e7241eaff9",
            "id": "rtb-07fc9a0e7241eaff9",
            "owner_id": "531752696321",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aee4f2c4fa02492d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-RT-0"
            },
            "tags_all": {
              "Name": "my-RT-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eead16e0278293e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "rtb-07fc9a0e7241eaff9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:route-table/rtb-002a8246fab769bfe",
            "id": "rtb-002a8246fab769bfe",
            "owner_id": "531752696321",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e625285e58fc4f63",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-RT-1"
            },
            "tags_all": {
              "Name": "my-RT-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de0f03034988602"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "rtb-002a8246fab769bfe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:route-table/rtb-078d80414764761cd",
            "id": "rtb-078d80414764761cd",
            "owner_id": "531752696321",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00edd499e6f1229ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-RT-2"
            },
            "tags_all": {
              "Name": "my-RT-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b45bb296f4da6d73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "rtb-078d80414764761cd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbe264fe2fd2d207",
            "region": "ap-south-1",
            "route_table_id": "rtb-07fc9a0e7241eaff9",
            "subnet_id": "subnet-05af23bba92da534a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037b8675a1d073263",
            "region": "ap-south-1",
            "route_table_id": "rtb-002a8246fab769bfe",
            "subnet_id": "subnet-0fd53ea2247e02656"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e90a3c67b7f2161e",
            "region": "ap-south-1",
            "route_table_id": "rtb-078d80414764761cd",
            "subnet_id": "subnet-07eafe2887a54c046"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:security-group/sg-04d02fa74db6a1046",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d02fa74db6a1046",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260305073001851800000003",
            "name_prefix": "terraform-",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-0"
            },
            "tags_all": {
              "Name": "sg-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-09eead16e0278293e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "sg-04d02fa74db6a1046",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:security-group/sg-019a022b3bd04002e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019a022b3bd04002e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260305073001851800000002",
            "name_prefix": "terraform-",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-1"
            },
            "tags_all": {
              "Name": "sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03de0f03034988602"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "sg-019a022b3bd04002e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:security-group/sg-022ffd5a57fa374df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022ffd5a57fa374df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260305073001851800000001",
            "name_prefix": "terraform-",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-2"
            },
            "tags_all": {
              "Name": "sg-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b45bb296f4da6d73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "sg-022ffd5a57fa374df",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:subnet/subnet-05af23bba92da534a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05af23bba92da534a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531752696321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-subnet-0"
            },
            "tags_all": {
              "Name": "my-subnet-0"
            },
            "vpc_id": "vpc-09eead16e0278293e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "subnet-05af23bba92da534a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:subnet/subnet-0fd53ea2247e02656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd53ea2247e02656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531752696321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-subnet-1"
            },
            "tags_all": {
              "Name": "my-subnet-1"
            },
            "vpc_id": "vpc-03de0f03034988602"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "subnet-0fd53ea2247e02656",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:subnet/subnet-07eafe2887a54c046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eafe2887a54c046",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531752696321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-subnet-2"
            },
            "tags_all": {
              "Name": "my-subnet-2"
            },
            "vpc_id": "vpc-0b45bb296f4da6d73"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "subnet-07eafe2887a54c046",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:vpc/vpc-09eead16e0278293e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e635fa35cfee3505",
            "default_route_table_id": "rtb-031fc2665c6069da9",
            "default_security_group_id": "sg-054901fd596eabbb8",
            "dhcp_options_id": "dopt-03f29eba5a3bdcc72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09eead16e0278293e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031fc2665c6069da9",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-vpc-0"
            },
            "tags_all": {
              "Name": "my-vpc-0"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "vpc-09eead16e0278293e",
            "region": "ap-south-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:vpc/vpc-03de0f03034988602",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0dfba06e49b41b23f",
            "default_route_table_id": "rtb-084056834fe261069",
            "default_security_group_id": "sg-0f04d86f234fad84a",
            "dhcp_options_id": "dopt-03f29eba5a3bdcc72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03de0f03034988602",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084056834fe261069",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-vpc-1"
            },
            "tags_all": {
              "Name": "my-vpc-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "vpc-03de0f03034988602",
            "region": "ap-south-1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:531752696321:vpc/vpc-0b45bb296f4da6d73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0c041f02cd969bff6",
            "default_route_table_id": "rtb-0aee7642dbbac9614",
            "default_security_group_id": "sg-09c90500b7de35fc7",
            "dhcp_options_id": "dopt-03f29eba5a3bdcc72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b45bb296f4da6d73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aee7642dbbac9614",
            "owner_id": "531752696321",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-vpc-2"
            },
            "tags_all": {
              "Name": "my-vpc-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "531752696321",
            "id": "vpc-0b45bb296f4da6d73",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}